--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>Chat App</h1>
 
-    <button id="increment">+1</button>
+    <form id="message-form">
+        <input name="message" type="text" placeholder="Message">
+        <button>Send</button>
+    </form>
 
 
 
