--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 
     <script id="location-template" type="text/html">
         <div>
-            <a href="{{location}}" target="_blank">My current Location</a>
+            <p>{{createdAt}} - <a href="{{location}}" target="_blank">My current Location</a></p>
         </div>
     </script>
 
