--- a/public/index.html
+++ b/public/index.html
@@ -4,30 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat App</title>
+    <link rel="icon" href="/img/favicon.png">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 <body>
-    <h1>Chat App</h1>
+    <div class="chat">
+        <div class="chat__sidebar">
 
-    <div id="messages"></div>
-    <div id="location"></div>
-    <br>
-    <form id="message-form">
-        <input name="message" type="text" placeholder="Message">
-        <button>Send</button>
-    </form>
-    <button id="send-location">Send Location</button>
+        </div>
+        <div class="chat__main">
+            <div id="messages" class="chat__messages"></div>
+                <div id="location"></div>
+
+                <div class="compose">
+                    <form id="message-form">
+                        <input name="message" type="text" placeholder="Message">
+                        <button>Send</button>
+                    </form>
+                    <button id="send-location">Send Location</button>
+                </div>
+        </div>
+    </div>
 
     <script id="message-template" type="text/html">
-        <div>
-            <p> {{createdAt}} - {{message}}</p>
+        <div class="message">
+            <p>
+                <span class="message__name">Some User Name</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p>{{message}}</p>
         </div>
     </script>
 
     <script id="location-template" type="text/html">
-        <div>
-            <p>{{createdAt}} - <a href="{{location}}" target="_blank">My current Location</a></p>
+        <div class="message" style="text-align: center">
+            <p>
+                <span class="message__name">Some User Name</span>
+                <span class="message__meta">{{createdAt}}</span>
+            </p>
+            <p><a href="{{location}}" target="_blank">My current Location</a></p>
         </div>
     </script>
+
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
