--- a/public/chat.html
+++ b/public/chat.html
@@ -16,7 +16,7 @@
 
                 <div class="compose">
                     <form id="message-form">
-                        <input name="message" type="text" placeholder="Message">
+                        <input name="message" type="text" placeholder="Message" required autocomplete="off">
                         <button>Send</button>
                     </form>
                     <button id="send-location">Send Location</button>
@@ -27,7 +27,7 @@
     <script id="message-template" type="text/html">
         <div class="message">
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p>{{message}}</p>
@@ -35,9 +35,9 @@
     </script>
 
     <script id="location-template" type="text/html">
-        <div class="message" style="text-align: center">
+        <div class="message">
             <p>
-                <span class="message__name">Some User Name</span>
+                <span class="message__name">{{username}}</span>
                 <span class="message__meta">{{createdAt}}</span>
             </p>
             <p><a href="{{location}}" target="_blank">My current Location</a></p>
